# Bee-Trail

./: .gitignore  AUTHORS  Doxyfile  Makefile  Makefile.am  README.md  TODO  configure.ac
src/: Makefile  main.cc  option-manager.cc  option-manager.hh  option-parser.cc  option-parser.hh  test.cc  the-program.cc  the-program.hh  timer.cc  timer.hh
src/ffunctions/: covariance-zone.cc  covariance-zone.hh  distance-middle.cc  distance-middle.hh  gray-scale-histogram.cc  gray-scale-histogram.hh  image-descriptor.cc  image-descriptor.hh  utilities.cc  utilities.hh
src/helpers/: point.cc  point.hh
src/swarm/: particle.cc  particle.hh  pso-settings.cc  pso-settings.hh  pso-settings.hxx  pso.cc  pso.hh  pso.hxx
src/video/: VideoManager.cc  VideoManager.hh  video-manager.cc  video-manager.hh
