AC_INIT([BeeTrail], [0.1], [yaiche_c@epita.fr])
AC_PREREQ([2.65])

#AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])


# ----------- look for c++ compiler
AC_LANG([C++])
AC_PROG_CC
AC_PROG_CXX

## --------------- ##
## Configuration.  ##
## --------------- ##

AC_CONFIG_SRCDIR([src/main.cc])
# Ask for the creation of config.h.
AC_CONFIG_HEADERS([config.h])

# Ask for the creation of the Makefiles.
AC_CONFIG_FILES([Makefile])

# Instantiate the output files.
AC_OUTPUT
